Change color of GVB link for better contrast: this was an issue Google Lighthouse indicated.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,10 @@ img {
     padding-top: 20px;
 }
 
+#gvb-link {
+    color: #003eff;
+}
+
 /* about.html */
 
 .top-row-padding {
